--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{site.language}}" class="scroll-smooth md:scroll-auto"/>
+<html lang="{{site.language}}" class="scroll-smooth md:scroll-smooth"/>
 
 <head>
     <meta charset="UTF-8">
@@ -84,7 +84,7 @@
         class="inline-flex items-center justify-center w-16 h-16 rounded-lg"
         href="/"
       >
-        <img src="https://cdn.glitch.global/d0c95c98-52d8-475f-a5a5-6d6d38e85c58/mylogo.svg?v=1657708077833" />
+        <img src="https://cdn.glitch.global/d0c95c98-52d8-475f-a5a5-6d6d38e85c58/mylogo.svg?v=1657708077833" alt="{{ site.title }} logo"/>
       </a>
 
   <ul class="flex items-center space-x-4 text-sm lg:text-base font-medium text-gray-500">
