--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -54,7 +54,7 @@
 
     <link rel="stylesheet" href="/styles.css">
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
-   <script src="https://cdn.tailwindcss.com"></script>
+   <!-- <script src="https://cdn.tailwindcss.com"></script> -->
    
    <script>
     document.addEventListener("DOMContentLoaded", function () {
