--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -69,9 +69,8 @@
     });
 </script>
 
-    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
-      rel="stylesheet"
-    />
+     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+
 </head>
 
 <body id=# {% if bodyClass or home %} class="{{'home ' if page.url == '/'}}{{bodyClass}}"{%- endif -%} >
