--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -53,6 +53,10 @@
     {%- endblock -%}
 
     <link rel="stylesheet" href="/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
    
