--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 @import "tailwindcss/utilities";
 
 /* Google Fonts */
-@import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap");
+/*@import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap");*/
 /* Root Variables */
 :root {
   --color-bg: #f9fafb;
