--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -73,7 +73,8 @@
     });
 </script>
 
-     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 
 </head>
 
