--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -14,10 +14,7 @@ templateClass: tmpl-home
       
       <!-- Responsive Image + No Lazy Loading for First Post -->
       <picture>
-  <source srcset="{{ post.data.thumbnail | replace('.webp', '-small.webp') }}" media="(max-width: 600px)">
-  <source srcset="{{ post.data.thumbnail | replace('.webp', '-medium.webp') }}" media="(max-width: 1200px)">
-  <!-- Default fallback if responsive images fail -->
-  <img class="rounded-t-lg w-full object-cover" 
+  img class="rounded-t-lg w-full object-cover" 
        src="{{ post.data.thumbnail }}" 
        alt="Thumbnail for {{ post.data.title }} by {{ post.data.client }}" 
        width="800" height="450"
