modified:   src/_includes/layouts/home.njk

--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -14,7 +14,7 @@ templateClass: tmpl-home
       
       <!-- Responsive Image + No Lazy Loading for First Post -->
       <picture>
-  img class="rounded-t-lg w-full object-cover" 
+  <img class="rounded-t-lg w-full object-cover" 
        src="{{ post.data.thumbnail }}" 
        alt="Thumbnail for {{ post.data.title }} by {{ post.data.client }}" 
        width="800" height="450"
